Fix header aka banner on firefox

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -426,12 +426,9 @@
 
 .options {
   text-align: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
 }
-
-#banner {
-    margin-top: -100px;
+#mainMenu-view{
+  height: 100%;
 }
 
 /* Start: Question Styling */
